feat: Add container with the main image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="container">
+		<img class="main-img" src="img/cat.jpg" alt="cat portrait">
+		<p class="clicks-number"></p>
+	</div>
+
 
 	<script src="js/app.js"></script>
 </body>
