feat: Add basic styles to the app

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<img class="main-img" src="img/cat.jpg" alt="cat portrait">
-		<p class="clicks-number"></p>
+		<p class="clicks-counter">0</p>
 	</div>
 
 
