feat: Add second cat

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
 	<div class="container">
-		<img class="main-img" src="img/cat.jpg" alt="cat portrait">
+		<div id="cat1" class="cat">
+			<h2>cat's name</h2>
+			<img class="main-img" src="img/cat.jpg" alt="cat portrait">
+		</div>
+		<div id="cat2" class="cat">
+			<h2>cat's name</h2>
+			<img class="main-img" src="img/cat2.jpg" alt="cat portrait">
+		</div>
 		<p class="clicks-counter">0</p>
 	</div>
 
