--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 <body>
 	<div class="container">
 		<div id="cat1" class="cat">
-			<h2>cat's name</h2>
+			<h2 class="cat__name">cat's name</h2>
 			<img class="main-img" src="img/cat.jpg" alt="cat portrait">
 		</div>
 		<div id="cat2" class="cat">
-			<h2>cat's name</h2>
+			<h2 class="cat__name">cat's name</h2>
 			<img class="main-img" src="img/cat2.jpg" alt="cat portrait">
 		</div>
-		<p class="clicks-counter">0</p>
 	</div>
-
-
+	<p class="clicks-counter">0</p>
+	
 	<script src="js/app.js"></script>
 </body>
 </html>
