--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 	<div class="container">
 		<div id="cat1" class="cat">
 			<h2 class="cat__name">cat's name</h2>
-			<img class="main-img" src="img/cat.jpg" alt="cat portrait">
+			<img id="cat1-img" class="main-img" src="img/cat.jpg" alt="cat portrait">
+			<p class="clicks-counter">0</p>
 		</div>
 		<div id="cat2" class="cat">
 			<h2 class="cat__name">cat's name</h2>
-			<img class="main-img" src="img/cat2.jpg" alt="cat portrait">
+			<img id="cat2-img" class="main-img" src="img/cat2.jpg" alt="cat portrait">
+			<p class="clicks-counter">0</p>
 		</div>
 	</div>
-	<p class="clicks-counter">0</p>
-	
+
 	<script src="js/app.js"></script>
 </body>
 </html>
