--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 </head>
 <body>
 	<div class="container">
-		<div id="cat1" class="cat">
+		<div class="list"></div>
+		<div class="cat">
 			<h2 class="cat__name">cat's name</h2>
-			<img id="cat1-img" class="main-img" src="img/cat.jpg" alt="cat portrait">
-			<p class="clicks-counter">0</p>
-		</div>
-		<div id="cat2" class="cat">
-			<h2 class="cat__name">cat's name</h2>
-			<img id="cat2-img" class="main-img" src="img/cat2.jpg" alt="cat portrait">
+			<img class="cat__img" src="img/cat.jpg" alt="cat portrait">
 			<p class="clicks-counter">0</p>
 		</div>
 	</div>
