feat: After click on cat name cat picture is loaded

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="list"></div>
 		<div class="cat">
 			<h2 class="cat__name">cat's name</h2>
-			<img class="cat__img" src="img/cat.jpg" alt="cat portrait">
+			<img class="cat__img" src="img/cat1.jpg" alt="cat portrait">
 			<p class="clicks-counter">0</p>
 		</div>
 	</div>
