--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		</div>
 	</div>
 
-	<script src="js/app.js"></script>
+	<!-- <script src="js/app.js"></script> -->
+	<script src="js/app-v2.js"></script>
 </body>
 </html>
