feat: Add admin form HTML structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,32 @@
 			<img class="cat__img" src="img/cat1.jpg" alt="cat portrait">
 			<p class="clicks-counter">0</p>
 		</div>
+		
+		<!-- ADMIN FORM -->
+		<div class="admin">
+			<button class="admin__btn">admin</button>
+			<form>
+				<fieldset>
+					<legend>Admin panel</legend>
+					<div>
+						<label for="name">Name:</label>
+						<input type="text" id="name" name="cat_name">
+					</div>
+					<div>
+						<label for="imgUrl">ImgUrl:</label>
+						<input type="text" id="imgUrl" name="cat_img">
+					</div>
+					<div>
+						<label for="clicks">#clicks:</label>
+						<input type="text" id="clicks" name="cat_clicks">
+					</div>
+					<div class="buttons">
+						<button class="cancel">cancel</button>
+						<button class="save">save</button>
+					</div>
+				</fieldset>
+			</form>
+		</div>
 	</div>
 
 	<!-- <script src="js/app.js"></script> -->
