feat: Add viewAdmin

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<img class="cat__img" src="img/cat1.jpg" alt="cat portrait">
 			<p class="clicks-counter">0</p>
 		</div>
-		
+
 		<!-- ADMIN FORM -->
 		<div class="admin">
 			<button class="admin__btn">admin</button>
-			<form>
+			<form class="admin__form">
 				<fieldset>
 					<legend>Admin panel</legend>
 					<div>
